--- a/jour03-premiers/templates/front.html.twig
+++ b/jour03-premiers/templates/front.html.twig
@@ -17,6 +17,9 @@
                 <li class="nav-item">
                     <a href="{{ path("page_catalogue") }}" class="nav-link">Catalogue</a>
                 </li>
+                <li class="nav-item">
+                    <a href="{{ path("page_panier") }}" class="nav-link">Panier</a>
+                </li>
             </ul>
         </nav>
     </header>
