--- a/jour03-premiers/templates/front.html.twig
+++ b/jour03-premiers/templates/front.html.twig
@@ -20,6 +20,10 @@
                 <li class="nav-item">
                     <a href="{{ path("page_panier") }}" class="nav-link">Panier</a>
                 </li>
+                <li class="nav-item">
+                    <a href="{{ path("page_dashboard") }}" class="nav-link">Dashboard</a>
+                </li>
+
             </ul>
         </nav>
     </header>
