--- a/jour07-tp/templates/front/accueil.html.twig
+++ b/jour07-tp/templates/front/accueil.html.twig
@@ -2,5 +2,15 @@
 
 {% block contenu_page %}
     <h1>Accueil</h1>
+    <div class="row">
+        <div class="card col-3">
+            <img src="{{ asset() }}" class="card-img-top" alt="{{titre}}">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+        </div>
+    </div>
 
 {% endblock %}
