--- a/jour07-tp/templates/front.html.twig
+++ b/jour07-tp/templates/front.html.twig
@@ -10,26 +10,29 @@
     <header class="bg-dark">
         <nav class="navbar navbar-expand navbar-dark container ">
             <span class="navbar-brand">
-                <a class="navbar-brand fs-3" href="#">Projet Articles</a>
+                <a class="navbar-brand fs-3" href="{{ path("page_accueil") }}">Projet Articles</a>
             </span>
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a href="{{ path("page_accueil") }}" class="nav-link">Accueil</a>
                 </li>
                 <li class="nav-item">
-                    <a href="" class="nav-link">Présentation</a>
+                    <a href="{{ path("page_presentation") }}" class="nav-link">Présentation</a>
                 </li>
                 <li class="nav-item">
-                    <a href="" class="nav-link">Mention légale</a>
+                    <a href="{{ path("page_mention_legale") }}" class="nav-link">Mention légale</a>
                 </li>
                 <li class="nav-item">
-                    <a href="" class="nav-link">Connexion</a>
+                    <a href="{{ path("page_connexion") }}" class="nav-link">Connexion</a>
+                </li>
+                <li class="nav-item">
+                    <a href="{{ path("page_dashboard") }}" class="nav-link">Dashboard</a>
                 </li>
 
             </ul>
         </nav>
     </header>
-    <main class="container">
+    <main class="container p-2">
         {% block contenu_page %}{% endblock %}
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
