--- a/jour07-tp/templates/front/accueil.html.twig
+++ b/jour07-tp/templates/front/accueil.html.twig
@@ -2,15 +2,23 @@
 
 {% block contenu_page %}
     <h1>Accueil</h1>
-    <div class="row">
-        <div class="card col-3">
-            <img src="{{ asset() }}" class="card-img-top" alt="{{titre}}">
-            <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+    <div class="row p-2">
+        {% for article in articles %}
+            <div class="card col-3 p-2 my-2">
+                <img src="{{ asset(article.url_img) }}" class="card-img-top" alt="{{article.titre}}">
+                <div class="card-body">
+                    <div class="d-flex justify-content-between">
+                        <h5 class="card-title">{{article.titre}}</h5>
+                        <p class="badge text-bg-secondary">Auteur : {{article.auteur}}</p>
+                    </div>
+                    <p class="card-text">{{article.description}}</p>
+                    <div class="d-flex justify-content-between">
+                        <p class="badge text-bg-secondary">{{article.dt_creation | format_datetime('short', 'none', locale: 'fr')}}</p>
+                        <p class="badge text-bg-secondary">Durée : {{article.duree}}</p>
+                    </div>
+                </div>
             </div>
-        </div>
+        {% endfor %}
     </div>
 
 {% endblock %}
