--- a/jour07-tp/templates/front.html.twig
+++ b/jour07-tp/templates/front.html.twig
@@ -28,7 +28,11 @@
                 <li class="nav-item">
                     <a href="{{ path("page_dashboard") }}" class="nav-link">Dashboard</a>
                 </li>
-
+                <li class="nav-item">
+                    <a href="{{ path("page_gestion_article") }}" class="nav-link">
+                        Gestion des Articles
+                    </a>
+                </li>
             </ul>
         </nav>
     </header>
