--- a/jour07-tp/templates/front/accueil.html.twig
+++ b/jour07-tp/templates/front/accueil.html.twig
@@ -5,7 +5,7 @@
     <div class="row p-2">
         {% for article in articles %}
             <div class="card col-3 p-2 my-2">
-                <img src="{{ asset(article.url_img) }}" class="card-img-top" alt="{{article.titre}}">
+                <img src="{{ asset(article.urlImg) }}" class="card-img-top" alt="{{article.titre}}">
                 <div class="card-body">
                     <div class="d-flex justify-content-between">
                         <h5 class="card-title">{{article.titre}}</h5>
@@ -13,7 +13,7 @@
                     </div>
                     <p class="card-text">{{article.description}}</p>
                     <div class="d-flex justify-content-between">
-                        <p class="badge text-bg-secondary">{{article.dt_creation | format_datetime('short', 'none', locale: 'fr')}}</p>
+                        <p class="badge text-bg-secondary">{{article.dtCreation | format_datetime('short', 'none', locale: 'fr')}}</p>
                         <p class="badge text-bg-secondary">Durée : {{article.duree}}</p>
                     </div>
                 </div>
