--- a/Jour11-tp/templates/auteur/edit.html.twig
+++ b/Jour11-tp/templates/auteur/edit.html.twig
@@ -1,8 +1,8 @@
-{% extends 'base.html.twig' %}
+{% extends 'back.html.twig' %}
 
 {% block title %}Edit Auteur{% endblock %}
 
-{% block body %}
+{% block body_back %}
     <h1>Edit Auteur</h1>
 
     {{ include('auteur/_form.html.twig', {'button_label': 'Update'}) }}
