--- a/Jour11-tp/templates/commentaire/edit.html.twig
+++ b/Jour11-tp/templates/commentaire/edit.html.twig
@@ -1,8 +1,8 @@
-{% extends 'base.html.twig' %}
+{% extends 'back.html.twig' %}
 
 {% block title %}Edit Commentaire{% endblock %}
 
-{% block body %}
+{% block body_back %}
     <h1>Edit Commentaire</h1>
 
     {{ include('commentaire/_form.html.twig', {'button_label': 'Update'}) }}
