--- a/Jour11-tp/templates/commentaire/new.html.twig
+++ b/Jour11-tp/templates/commentaire/new.html.twig
@@ -1,8 +1,8 @@
-{% extends 'base.html.twig' %}
+{% extends 'back.html.twig' %}
 
 {% block title %}New Commentaire{% endblock %}
 
-{% block body %}
+{% block body_back %}
     <h1>Create new Commentaire</h1>
 
     {{ include('commentaire/_form.html.twig') }}
