--- a/Jour11-tp/templates/auteur/index.html.twig
+++ b/Jour11-tp/templates/auteur/index.html.twig
@@ -1,9 +1,11 @@
-{% extends 'base.html.twig' %}
+{% extends 'back.html.twig' %}
 
 {% block title %}Auteur index{% endblock %}
 
-{% block body %}
+{% block body_back %}
     <h1>Auteur index</h1>
+
+    <a href="{{ path('app_auteur_new') }}" class="btn btn-primary my-3 p-1">Créer un nouveau auteur</a>
 
     <table class="table">
         <thead>
@@ -23,8 +25,9 @@
                 <td>{{ auteur.prenom }}</td>
                 <td>{{ auteur.nom }}</td>
                 <td>
-                    <a href="{{ path('app_auteur_show', {'id': auteur.id}) }}">show</a>
-                    <a href="{{ path('app_auteur_edit', {'id': auteur.id}) }}">edit</a>
+                    <a href="{{ path('app_auteur_edit', {'id': auteur.id}) }}" class="btn btn-warning btn-sm mx-2"><i class="bi bi-pencil-square"></i></a>
+
+                    {{ include('auteur/_delete_form.html.twig') }}
                 </td>
             </tr>
         {% else %}
@@ -35,5 +38,4 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_auteur_new') }}">Create new</a>
 {% endblock %}
