--- a/Jour11-tp/templates/auteur/new.html.twig
+++ b/Jour11-tp/templates/auteur/new.html.twig
@@ -1,8 +1,8 @@
-{% extends 'base.html.twig' %}
+{% extends 'back.html.twig' %}
 
 {% block title %}New Auteur{% endblock %}
 
-{% block body %}
+{% block body_back %}
     <h1>Create new Auteur</h1>
 
     {{ include('auteur/_form.html.twig') }}
