--- a/Jour11-tp/templates/back.html.twig
+++ b/Jour11-tp/templates/back.html.twig
@@ -5,6 +5,12 @@
     <section class="row">
         <sidebar class="col-3">
             <h2>Menu admin</h2>
+            <div class="list-group">
+                <a href=" {{ path("app_dashboard") }} " class="list-group-item list-group-item-action">Dashboard</a>
+                <a href=" {{ path("app_recette_index") }} " class="list-group-item list-group-item-action">Gestion des recettes</a>
+                <a href=" {{ path("app_auteur_index") }} " class="list-group-item list-group-item-action">Gestion des auteurs</a>
+                <a href=" {{ path("app_commentaire_index") }} " class="list-group-item list-group-item-action">Gestion des commentaires</a>
+            </div>
         </sidebar>
         <div class="col-9">
             {% block body_back %}{% endblock %}
