--- a/Jour11-tp/templates/commentaire/index.html.twig
+++ b/Jour11-tp/templates/commentaire/index.html.twig
@@ -1,9 +1,11 @@
-{% extends 'base.html.twig' %}
+{% extends 'back.html.twig' %}
 
 {% block title %}Commentaire index{% endblock %}
 
-{% block body %}
+{% block body_back %}
     <h1>Commentaire index</h1>
+
+    <a href="{{ path('app_commentaire_new') }}" class="btn btn-primary my-3 p-1">Créer un nouveau commentaire</a>
 
     <table class="table">
         <thead>
@@ -37,5 +39,5 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_commentaire_new') }}">Create new</a>
+    
 {% endblock %}
