--- a/Jour11-tp/templates/recette/edit.html.twig
+++ b/Jour11-tp/templates/recette/edit.html.twig
@@ -1,8 +1,9 @@
-{% extends 'base.html.twig' %}
+{% extends 'back.html.twig' %}
 
 {% block title %}Edit Recette{% endblock %}
 
-{% block body %}
+{% block body_back %}
+
     <h1>Edit Recette</h1>
 
     {{ include('recette/_form.html.twig', {'button_label': 'Update'}) }}
@@ -10,4 +11,5 @@
     <a href="{{ path('app_recette_index') }}">back to list</a>
 
     {{ include('recette/_delete_form.html.twig') }}
+    
 {% endblock %}
