--- a/Jour11-tp/templates/recette/new.html.twig
+++ b/Jour11-tp/templates/recette/new.html.twig
@@ -1,9 +1,9 @@
-{% extends 'base.html.twig' %}
+{% extends 'back.html.twig' %}
 
 {% block title %}New Recette{% endblock %}
 
-{% block body %}
-    <h1>Create new Recette</h1>
+{% block body_back %}
+    <h1>Créé une nouvelle recette</h1>
 
     {{ include('recette/_form.html.twig') }}
 
