--- a/Jour11-tp/templates/base.html.twig
+++ b/Jour11-tp/templates/base.html.twig
@@ -11,6 +11,7 @@
         {% endblock %}
     </head>
     <body>
+        {# {{ dump(app.user) }} #} 
         <header>
             <nav class="navbar navbar-expand-lg bg-body-tertiary">
                 <div class="container-fluid">
@@ -21,7 +22,15 @@
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                         <div class="navbar-nav">
                             <a class="nav-link active" aria-current="page" href="{{ path("page_home")}}">Accueil</a>
-                            <a class="nav-link" href=" {{ path("app_dashboard") }} ">Dashboard</a>
+                            {% if app.user is null %}
+                                <a class="nav-link" href=" {{ path("app_login") }} ">Connexion</a>
+                            {% else %}
+                                {% if app.user.roles[0] == "ROLE_ADMIN" %}
+                                    <a class="nav-link" href=" {{ path("app_dashboard") }} ">Dashboard</a>
+                                {% endif %}
+                                <a class="nav-link" href=" {{ path("app_logout") }} ">Déconnexion</a>
+                            {% endif %}
+                            
                         </div>
                     </div>
                 </div>
