--- a/Jour11-tp/templates/commentaire/index.html.twig
+++ b/Jour11-tp/templates/commentaire/index.html.twig
@@ -7,7 +7,7 @@
 
     <a href="{{ path('app_commentaire_new') }}" class="btn btn-primary my-3 p-1">Créer un nouveau commentaire</a>
 
-    <table class="table">
+    <table class="table align-middle">
         <thead>
             <tr>
                 <th>Id</th>
@@ -15,7 +15,7 @@
                 <th>Sujet</th>
                 <th>Message</th>
                 <th>Dt_creation</th>
-                <th>actions</th>
+                <th>Actions</th>
             </tr>
         </thead>
         <tbody>
@@ -23,12 +23,12 @@
             <tr>
                 <td>{{ commentaire.id }}</td>
                 <td>{{ commentaire.email }}</td>
-                <td>{{ commentaire.sujet }}</td>
-                <td>{{ commentaire.message }}</td>
+                <td>{{ commentaire.sujet | more(2) }}</td>
+                <td>{{ commentaire.message | more(5) }}</td>
                 <td>{{ commentaire.dtCreation ? commentaire.dtCreation|date('Y-m-d') : '' }}</td>
-                <td>
-                    <a href="{{ path('app_commentaire_show', {'id': commentaire.id}) }}">show</a>
-                    <a href="{{ path('app_commentaire_edit', {'id': commentaire.id}) }}">edit</a>
+                <td width="100">
+                    <a href="{{ path('app_commentaire_edit', {'id': commentaire.id}) }}" class="btn btn-warning btn-sm mx-2"><i class="bi bi-pencil-square"></i></a>
+                    {{ include('commentaire/_delete_form.html.twig') }}
                 </td>
             </tr>
         {% else %}
